# TrikiTitans

./: CMakeLists.txt
include/: ClaseA.hpp  Cliente.hpp  Export.hpp  Ficha.hpp  MatrizEnTripletas.hpp  Servidor.hpp  Tablero.hpp  TableroVisual.hpp  Tripleta.hpp
src/: ClaseA.cpp  Cliente.cpp  MainCliente.cpp  MainServidor.cpp  MatrizEnTripletas.cpp  Servidor.cpp  Tablero.cpp  TableroVisual.cpp  Tripleta.cpp  main.cpp
ui/: TableroVisual.ui
